[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
actix-web = "4.9.0"
actix-multipart = "0.7.2"
tokio = "1.40.0"
sanitize-filename = "0.5.0"
actix-files = "0.6.6"
futures-util = "0.3.30"
actix-cors = "0.7.0"
rusqlite = "0.32.1"
uuid = { version = "1.10.0", features = ["v4"] }
